@@ -42,6 +42,11 @@
             "result": "success",
             "timestamp": "2017-05-30T18:53:27.154Z",
             "sampled": true,
+            "span_count": {
+                "dropped": {
+                    "total": 2
+                }
+            },
             "context": {
                 "request": {
                     "socket": {
@@ -218,6 +223,11 @@
             "result": "200",
             "timestamp": "2017-05-30T18:53:42.281999Z",
             "sampled": true,
+            "span_count": {
+                "dropped": {
+                    "total": 258
+                }
+            },
             "spans": [
                 {
                     "name": "SELECT FROM product_types",
