@@ -17,6 +17,7 @@ func TestEventTransform(t *testing.T) {
 	id := "123"
 	result := "tx result"
 	sampled := false
+	dropped := 5
 
 	tests := []struct {
 		Event  Event
@@ -45,14 +46,16 @@ func TestEventTransform(t *testing.T) {
 				Context:   common.MapStr{"foo": "bar"},
 				Spans:     []Span{},
 				Sampled:   &sampled,
+				SpanCount: SpanCount{Dropped: Dropped{Total: &dropped}},
 			},
 			Output: common.MapStr{
-				"id":       id,
-				"name":     "mytransaction",
-				"type":     "tx",
-				"result":   "tx result",
-				"duration": common.MapStr{"us": 65980},
-				"sampled":  false,
+				"id":         id,
+				"name":       "mytransaction",
+				"type":       "tx",
+				"result":     "tx result",
+				"duration":   common.MapStr{"us": 65980},
+				"span_count": common.MapStr{"dropped": common.MapStr{"total": 5}},
+				"sampled":    false,
 			},
 			Msg: "Full Event",
 		},
